--- a/index.html
+++ b/index.html
@@ -8,23 +8,27 @@
   </head>
   <body class="p-10 text-gray-800">
     <section class="bg-purple-100 rounded-2xl p-5">
-        <div class="container border mx-auto">
-            <div class="flex">
-                <a class="text-3xl font-bold" href="index.html">Agency</a>
-                <div>
-                    <button></button>
-                    <ul>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                    </ul>
-                </div>
-                <a class="ml-auto px-3 py-2 text-medium font-bold bg-red-500 text-white rounded" href="">Get a Quote</a>
-            </div>
+      <div class="container border mx-auto">
+        <div class="flex">
+          <a class="text-3xl font-bold" href="index.html">Agency</a>
+          <div>
+            <button></button>
+            <ul>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+            </ul>
+          </div>
+          <a
+            class="ml-auto px-3 py-2 text-medium font-bold bg-red-500 text-white rounded"
+            href=""
+            >Get a Quote</a
+          >
         </div>
+      </div>
     </section>
   </body>
 </html>
