--- a/index.html
+++ b/index.html
@@ -6,25 +6,112 @@
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="p-10 text-gray-800">
+  <body class="p-5 md:p-10 text-gray-800">
     <section class="bg-purple-100 rounded-2xl p-5">
       <div class="container border mx-auto">
         <div class="flex">
-          <a class="text-3xl font-bold" href="index.html">Agency</a>
-          <div>
-            <button></button>
-            <ul>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
+          <a
+            class="text-3xl font-bold border-r border-purple-300 pr-5 mr-5"
+            href="index.html"
+            >Agency</a
+          >
+          <div class="my-auto">
+            <button class="lg:hidden">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M3.75 5.25h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5"
+                />
+              </svg>
+            </button>
+            <ul class="hidden lg:flex font-bold text-gray-600">
+              <li class="pr5">
+                <a
+                  class="px-5 py-2 border-purple-100 hover:border-purple-300 rounded"
+                  href=""
+                  >Home</a
+                >
+              </li>
+              <li class="pr5">
+                <a
+                  class="px-5 py-2 border-purple-100 hover:border-purple-300 rounded"
+                  href=""
+                  >About</a
+                >
+              </li>
+              <li class="pr5">
+                <a
+                  class="px-5 py-2 border-purple-100 hover:border-purple-300 rounded"
+                  href=""
+                  >Services</a
+                >
+              </li>
+              <li class="pr5">
+                <a
+                  class="px-5 py-2 border-purple-100 hover:border-purple-300 rounded"
+                  href=""
+                  >Portfolio</a
+                >
+              </li>
+              <li class="pr5">
+                <a
+                  class="px-5 py-2 border-purple-100 hover:border-purple-300 rounded"
+                  href=""
+                  >Contact</a
+                >
+              </li>
             </ul>
           </div>
           <a
-            class="ml-auto px-3 py-2 text-medium font-bold bg-red-500 text-white rounded"
+            class="flex ml-auto px-3 py-2 text-medium font-bold bg-red-500 text-white rounded"
             href=""
-            >Get a Quote</a
-          >
+            ><span class="pr-2 hidden lg:block">Get a Quote</span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M8.625 9.75a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H8.25m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H12m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0h-.375m-13.5 3.01c0 1.6 1.123 2.994 2.707 3.227 1.087.16 2.185.283 3.293.369V21l4.184-4.183a1.14 1.14 0 0 1 .778-.332 48.294 48.294 0 0 0 5.83-.498c1.585-.233 2.708-1.626 2.708-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0 0 12 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018Z"
+              />
+            </svg>
+          </a>
+        </div>
+        <div>
+          <ul class="lg:hidden font-bold text-gray-600">
+            <li class="mt-2">
+              <a class=" py-2" href="">Home</a>
+            </li>
+            <li class="mt-2">
+              <a class=" py-2" href="">About</a>
+            </li>
+            <li class="mt-2">
+              <a class=" py-2" href="">Services</a>
+            </li>
+            <li class="mt-2">
+              <a class=" py-2" href="">Portfolio</a>
+            </li>
+            <li class="mt-2">
+              <a class=" py-2" href="">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="flex">
+          <div class="w-1/2">test</div>
+          <div class="w-1/2">test </div>
         </div>
       </div>
     </section>
