--- a/index.html
+++ b/index.html
@@ -90,28 +90,59 @@
             </svg>
           </a>
         </div>
-        <div>
+        <div class="hidden">
           <ul class="lg:hidden font-bold text-gray-600">
             <li class="mt-2">
-              <a class=" py-2" href="">Home</a>
+              <a class="py-2" href="">Home</a>
             </li>
             <li class="mt-2">
-              <a class=" py-2" href="">About</a>
+              <a class="py-2" href="">About</a>
             </li>
             <li class="mt-2">
-              <a class=" py-2" href="">Services</a>
+              <a class="py-2" href="">Services</a>
             </li>
             <li class="mt-2">
-              <a class=" py-2" href="">Portfolio</a>
+              <a class="py-2" href="">Portfolio</a>
             </li>
             <li class="mt-2">
-              <a class=" py-2" href="">Contact</a>
+              <a class="py-2" href="">Contact</a>
             </li>
           </ul>
         </div>
-        <div class="flex">
-          <div class="w-1/2">test</div>
-          <div class="w-1/2">test </div>
+        <div class="flex py-12 text-center lg:text-left lg:py-36">
+          <div class="w-full lg:w-1/2">
+            <h2
+              class="text-center lg:text-left text-3xl font-bold lg:font-semibold lg:text-7xl"
+            >
+              World class design for your products.
+            </h2>
+            <p
+              class="text-center lg:text-left mt-4 lg:mt-8 text-2xl text-gray-600"
+            >
+              Lets bring life to your brand.
+            </p>
+            <div class="flex mt-12 justify-center lg:justify-start">
+              <a
+                class="text-lg mr-5 rounded text-white px-3 py-2 bg-purple-600"
+                href=""
+                >Service</a
+              >
+              <a
+                class="text-lg mr-5 rounded text-white px-3 py-2 bg-red-600"
+                href=""
+                >Contact Us</a
+              >
+            </div>
+          </div>
+          <div class="w-1/2 hidden lg:flex">
+            <img src="./assets/hero2.svg" alt="" />
+          </div>
+        </div>
+        <div class="flex justify-center">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 5.25 7.5 7.5 7.5-7.5m-15 6 7.5 7.5 7.5-7.5" />
+          </svg>
+          <span class="ml-2">Scroll Down</span>          
         </div>
       </div>
     </section>
