--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="p-5 md:p-10 text-gray-800">
-    <section class="bg-purple-100 rounded-2xl p-5">
+    <section class="bg-purple-100 rounded-2xl p-5 mb-10">
       <div class="container border mx-auto">
         <div class="flex">
           <a
@@ -139,10 +139,119 @@
           </div>
         </div>
         <div class="flex justify-center">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 5.25 7.5 7.5 7.5-7.5m-15 6 7.5 7.5 7.5-7.5" />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="m4.5 5.25 7.5 7.5 7.5-7.5m-15 6 7.5 7.5 7.5-7.5"
+            />
           </svg>
-          <span class="ml-2">Scroll Down</span>          
+          <span class="ml-2">Scroll Down</span>
+        </div>
+      </div>
+    </section>
+    <section class="bg-red-100 rounded-2xl p-5 mb-10">
+      <div class="container mx-auto">
+        <div class="py-28">
+          <h2 class="text-center font-bold text-5xl">Our Service</h2>
+          <p class="w-1/2 text-center mx-auto mt-5">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere, a
+            natus! Doloremque sequi recusandae id, culpa vel vero animi
+            provident adipisci magni explicabo? Sapiente molestiae sit ab totam,
+            repellendus dolore?
+          </p>
+        </div>
+        <div class="flex flex-wrap pb-28">
+          <div class="w-1/3 p-5">
+            <div class="bg-white p-10 rounded-2xl shadow-lg">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-16 mb-12 text-blue-600"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M3 13.125C3 12.504 3.504 12 4.125 12h2.25c.621 0 1.125.504 1.125 1.125v6.75C7.5 20.496 6.996 21 6.375 21h-2.25A1.125 1.125 0 0 1 3 19.875v-6.75ZM9.75 8.625c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125v11.25c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V8.625ZM16.5 4.125c0-.621.504-1.125 1.125-1.125h2.25C20.496 3 21 3.504 21 4.125v15.75c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V4.125Z"
+                />
+              </svg>
+
+              <h2 class="text-2xl font-bold text-gray-700">Design</h2>
+              <p class="mt-3">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+                asperiores ratione natus, quasi pariatur aliquam facere ex
+                sapiente harum deserunt enim, suscipit consequatur officiis
+                dicta obcaecati molestiae porro saepe dignissimos.
+              </p>
+            </div>
+          </div>
+          <div class="w-1/3 p-5">
+            <div class="bg-white p-10 rounded-2xl shadow-lg">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-16 mb-12 text-green-600"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m6.75 7.5 3 2.25-3 2.25m4.5 0h3m-9 8.25h13.5A2.25 2.25 0 0 0 21 18V6a2.25 2.25 0 0 0-2.25-2.25H5.25A2.25 2.25 0 0 0 3 6v12a2.25 2.25 0 0 0 2.25 2.25Z"
+                />
+              </svg>
+
+              <h2 class="text-2xl font-bold text-gray-700">Development</h2>
+              <p class="mt-3">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+                asperiores ratione natus, quasi pariatur aliquam facere ex
+                sapiente harum deserunt enim, suscipit consequatur officiis
+                dicta obcaecati molestiae porro saepe dignissimos.
+              </p>
+            </div>
+          </div>
+          <div class="w-1/3 p-5">
+            <div class="bg-white p-10 rounded-2xl shadow-lg">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-16 mb-12 text-red-600"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M10.5 6a7.5 7.5 0 1 0 7.5 7.5h-7.5V6Z"
+                />
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M13.5 10.5H21A7.5 7.5 0 0 0 13.5 3v7.5Z"
+                />
+              </svg>
+
+              <h2 class="text-2xl font-bold text-gray-700">Digit Marketing</h2>
+              <p class="mt-3">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+                asperiores ratione natus, quasi pariatur aliquam facere ex
+                sapiente harum deserunt enim, suscipit consequatur officiis
+                dicta obcaecati molestiae porro saepe dignissimos.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
